--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,31 @@
-/* RESET */
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+/* REGOLE GENERALI */
+body{
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-/* CONTAINER */
-.container{
-    max-width: 1170px;
-    margin: 0 auto;
-}
-
-/* ROW */
-.row{
+.box{
+    width: 100%;
+    height: 100px;
+    background-color: #006CFA;
+    border: 1px white solid;
+    color: white;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.box.nested{
+    height: 60px;
+    background-color: #00E165;
+    border: 1px #006CFA solid;
+}
+
+.special{
+    padding: 20px;
+    background-color: #006CFA;
+    border: 1px white solid;
+}
+
+.padding{
+    padding-top: 20px;
 }
